# rickview

./: .dockerignore  .env.dist  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark  codemeta.json  download  paper.bib  paper.md  paper.tex  prepare  resource.rs  rickview.css  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  featurerequest.yml
.github/workflows/: build.yml  docker.yml  lint_and_build.yml  release.yml
data/: about.html  custom.html  default.toml  example.ttl  footer.html  header.html  hito.ttl  index.html  kb.ttl  prefix.toml  resource.html  rickview.css  roboto.css  template.html
src/: about.rs  classes.rs  config.rs  main.rs  page.rs  rdf.rs  rdf.rs.orig  resource.rs  small_graph.rs
