[package]
name = "rickview"
version = "0.2.4"
edition = "2021"
license = "MIT"
keywords = ["rdf", "semantic-web", "linked-data"]
categories = ["web-programming::http-server"]
description = "A fast RDF viewer (Linked Data browser)"
authors = ["Konrad Höffner"]
readme = "README.md"
repository = "https://github.com/konradhoeffner/rickview"

[dependencies]
sophia = "0.8.0-alpha.1"
actix-web = "4"
multimap = "0.9"
tinytemplate = "1"
serde = { version = "1", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"], optional = true }
hdt = { version = "0.1.2", optional = true }
deepsize = { version = "0.2.0", default-features = false, features = ["std"] }
bytesize = "1.1.0"
zstd = { version = "0.12.0", features = ["zstdmt"] }
ureq = "2.6.2"
const-fnv1a-hash = "1.1.0"
lazy_static = "1.4.0"
serde_json = "1.0.96"

[features]
default = ["rdfxml", "log", "hdt"]
rdfxml = ["sophia/xml"]
log = ["env_logger"]
hdt = ["dep:hdt"]

[profile.release]
# see https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
lto = "thin"
# when profiling, set debug to 1 and strip to false
#debug = 1
strip = true
incremental = true # disable in CI with CARGO_INCREMENTAL=0
