[package]
name = "rickview"
version = "0.5.0"
edition = "2024"
license = "MIT"
keywords = ["rdf", "semantic-web", "linked-data"]
categories = ["web-programming::http-server"]
description = "A fast RDF viewer (Linked Data browser)"
authors = ["Konrad Höffner"]
readme = "README.md"
repository = "https://github.com/konradhoeffner/rickview"
rust-version = "1.88"

[dependencies]
sophia = "0.9"
actix-web = "4"
multimap = "0.10"
tinytemplate = "1"
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
hdt = { version = "0.3", optional = true }
deepsize = { version = "0.2", default-features = false, features = ["std"] }
bytesize = "2"
zstd = { version = "0.13", features = ["zstdmt"] }
ureq = "3"
const-fnv1a-hash = "1"
serde_json = "1"

[features]
default = ["rdfxml", "hdt"]
rdfxml = ["sophia/xml"]
hdt = ["dep:hdt"]

[profile.release]
# see https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
lto = "thin"
# when profiling, set debug to 1 and strip to false
#debug = 1
strip = true
incremental = true # disable in CI with CARGO_INCREMENTAL=0
